test/integration/good/lang/good_funs.stan
transformed data {
  real x;
  real y;
  real z;
  int n;
  
  z = ((n) ? x : y);
  
  z = lchoose(x, y);
}
model {
  
}

