test/integration/bad/numeric-literal/int-bad4.stan
transformed data {
    int n = 2_147_483_648;
}